# minemod-vuln-indexer

./: .env.example  .gitignore  LICENSE  README.md  index.html  pyproject.toml
dashboard/: __init__.py  app.py
dashboard/components/: badges.py  details.py  filters.py  metrics.py  page.py  pagination.py  tables.py
dashboard/data/: __init__.py  presentation.py  queries.py  schemas.py  view_models.py
dashboard/legacy_pages/: 6_manual_review.py  7_runs.py
dashboard/pages/: 1_Vulnerabilities.py  1_overview.py  2_Mods.py  2_mods.py  3_Modpacks.py  3_vulnerabilities.py  4_AI.py  4_modpacks.py  5_findings.py  6_manual_review.py  7_runs.py  8_recent_fix_candidates.py  9_legacy_exposure.py
docs/: LOCAL_LAB.md  ROADMAP.md  SAFETY_SCOPE.md
examples/lab/: README.md
src/minemod_audit/: __init__.py  advisories.py  cli.py  config.py  curseforge.py  database.py  http_client.py  io.py  manifest.py  models.py  pipeline.py  recent_security_fixes.py  release_lag.py  reports.py  repository.py  security.py  (+2 more)
tests/: test_advisories.py  test_curseforge_release_lag.py  test_dashboard_pages.py  test_dashboard_presentation.py  test_dashboard_queries.py  test_database.py  test_gemini_ai.py  test_http_client.py  test_lab_validation.py  test_manifest.py  test_modrinth_provider.py  test_pipeline_providers.py  test_provider_deduplication.py  test_provider_registry.py  test_recent_fix_discovery.py  test_recent_security_fixes.py  test_release_lag.py  test_release_lag_pipeline.py  test_reports.py  test_repository_resolver.py  test_security.py  test_targeted_mining.py  test_versions.py
(+18 files in other folders)
